<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EuroMaidan</string>
    <string name="action_settings">Settings</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="email">E-mail</string>
    <string name="password">Пароль</string>
    <string name="login">Вход</string>
    <string name="register">Регистрация</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="confirm_password">Повторить пароль</string>
    <string name="save">Сохранить</string>
    <string name="country">Страна</string>
    <string name="city">Город</string>
    <string name="school">Школа</string>
    <string name="university">Университет</string>
    <string name="skip">Пропустить</string>
    <string name="family_status">Семейное положение</string>
    <string name="native_city">Родной город</string>
    <string name="pickBirthDate">Дата рождения</string>
    <string name="single">Не замужем</string>
    <string name="dating">Встречаюсь</string>
    <string name="engaged">Помолвлена</string>
    <string name="married">Замужем</string>
    <string name="in_love">Влюблена</string>
    <string name="its_complicated">Все сложно</string>
    <string name="in_active_search">В активном поиске</string>
    <string name="search">Поиск</string>
    <string name="female">Женский</string>
    <string name="male">Мужской</string>
    <string name="cancel">Отмена</string>

    <string-array name="drawer_items">
        <item name="news">Новости</item>
        <item name="message">Сообщения</item>
        <item name="friends">Друзья</item>
        <item name="groups">Группы</item>
        <item name="photos">Фотографии</item>
        <item name="video">Видеозаписи</item>
        <item name="audio">Аудиозаписи</item>
        <item name="settings">Настройки</item>
    </string-array>

    <array name="drawer_icons">
        <item>@drawable/news_icon</item>
        <item>@drawable/message_icon</item>
        <item>@drawable/friends_icon</item>
        <item>@drawable/groups_icon</item>
        <item>@drawable/photo_icon</item>
        <item>@drawable/video_icon</item>
        <item>@drawable/audio_icon</item>
        <item>@drawable/settings_icon</item>
    </array>

    <string name="add_user">Добавить</string>
    <string name="subscribers">Подписчики</string>
    <string name="upload_photo">Upload photo</string>
    <string name="avatar_zone">Avatar zone</string>
    <string name="background_zone">Background zone</string>
    <string name="new_password">Новый пароль</string>
    <string name="send">Отправить</string>
    <string name="player_notification_title_template">Player: %1$s</string>
    <string name="player_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.</string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>

</resources>
