<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <ImageView
            style="@style/LogoStyle"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"/>
    <EditText
        style="@style/editTextAndButtonDimensions"
        android:id="@+id/country_edittext"
        android:layout_gravity="center_horizontal"
        android:hint="@string/country"/>

    <EditText
        style="@style/editTextAndButtonDimensions"
        android:id="@+id/city_edittext"
        android:layout_gravity="center_horizontal"
        android:hint="@string/city"/>

    <EditText
        style="@style/editTextAndButtonDimensions"
        android:id="@+id/school_edittext"
        android:layout_gravity="center_horizontal"
        android:hint="@string/school"/>

    <Button
        style="@style/editTextAndButtonDimensions"
        android:text="@string/save"
        android:id="@+id/save_button"
        android:layout_gravity="center_horizontal" />

    <Button
        style="@style/editTextAndButtonDimensions"
        android:text="@string/skip"
        android:id="@+id/skip_button"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
