<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    >

    <ImageView
        style="@style/LogoStyle"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"/>

    <EditText
        style="@style/EditTextStyle"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText" />

    <EditText
        style="@style/EditTextStyle"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText2" />

    <Button
        style="@style/ButtonStyle"
        android:text="@string/login"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"/>

    <Button
        style="@style/ButtonStyle"
        android:text="@string/register"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal" />

    <TextView
        style="@style/TextViewForgotPassStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />
</LinearLayout>